--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,16 +5,16 @@
   "background_color": "#000000",
   "display": "standalone",
   "scope": "/",
-  "start_url": "/",
+  "start_url": ".",
   "icons": [
   
     {
-      "src": "images/icon/icon-192x192.png",
+      "src": "icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "images/icon/icon-512x512.png",
+      "src": "icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
