--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mapbox-gl": "^1.13.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
